[package]
name = "remote_agent"
version = "1.0.0"
edition = "2021"
description = "Remote Terminal Agent for ReHLDS - connects to central server and provides PTY terminal"

[lib]
name = "remote_agent"
crate-type = ["cdylib"]  # 编译为 .so 动态库

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "signal", "macros", "fs"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
parking_lot = "0.12.5"
once_cell = "1.21.3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["process", "signal", "fs", "term", "hostname"] }
libc = "0.2.180"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"   # Agent 崩溃不影响 rehlds 主进程
strip = true
opt-level = "z"   # 优化体积
